api docs fixes
